# ml-studio

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
compose/: .env.example  mlflow.yml  pytorch.yml  tensorflow.yml
docker/00-base/: .dockerignore  Dockerfile  README.md  verify.sh
docker/01-python/: .dockerignore  Dockerfile  README.md  verify.sh
docker/02-science/: README.md
docker/03-pytorch/: README.md
docker/03-tensorflow/: README.md
docker/04-jupyter/: README.md
docker/05-mlflow/: README.md
docs/: architecture.md
scripts/project/: constants.py  file_utils.py
scripts/project/tests/: test_file_utils.py
src/ml_studio/project/: cli.py  generator.py  uv_utils.py
templates/ml-template/: Makefile  README.md  pyproject.toml
templates/ml-template/scripts/: evaluate.py  predict.py  train.py
templates/ml_template/: .gitignore  Makefile  README.md  pyproject.toml
