[project]
name = "ml-studio"
version = "1.0.0"
description = "ML Engineering Platform & Projects"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "mypy>=1.17",
    "pre-commit>=4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.uv]
package = true