[project]
name = "ml-project"
version = "0.1.0"
description = "Reusable machine learning project template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "scikit-learn",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = false
